# final-project-rebekahx23

./: .env.example  README.md  pyproject.toml
data_quality_agent/: __init__.py  agent.py  config.py  db.py  evaluate.py  experiment.py  local_lab.py  log_store.py  manual_benchmark.py  run_job.py  tools.py
documentation/: DOCUMENTATION.md
final-summary-output/: manual-summary-aggregated.csv
presentation/: Blog_Post_Style_Presentation.md  PRESENTATION.md
runs/: dq-manual-complex-p05-flash-20260320T050803Z-evaluation.html  dq-manual-complex-p05-flash-20260320T050803Z-evaluation.json  dq-manual-complex-p05-flash-20260320T050803Z-evaluation.md  dq-manual-complex-p05-flash-20260320T050803Z-terminal.html  dq-manual-complex-p05-flash-20260320T050803Z.html  dq-manual-complex-p05-flash-20260320T050803Z.jsonl  dq-manual-complex-p05-flash-20260320T050803Z.md  dq-manual-complex-p05-pro-20260320T051054Z-evaluation.html  dq-manual-complex-p05-pro-20260320T051054Z-evaluation.json  dq-manual-complex-p05-pro-20260320T051054Z-evaluation.md  dq-manual-complex-p05-pro-20260320T051054Z-terminal.html  dq-manual-complex-p05-pro-20260320T051054Z.html  dq-manual-complex-p05-pro-20260320T051054Z.jsonl  dq-manual-complex-p05-pro-20260320T051054Z.md  dq-manual-complex-p05-pro-20260320T061657Z-evaluation.html  dq-manual-complex-p05-pro-20260320T061657Z-evaluation.json  dq-manual-complex-p05-pro-20260320T061657Z-evaluation.md  dq-manual-complex-p05-pro-20260320T061657Z-terminal.html  dq-manual-complex-p05-pro-20260320T061657Z.html  dq-manual-complex-p05-pro-20260320T061657Z.jsonl  (+411 more)
(+3 files in other folders)
